Reorganize status and impact enums and add support for maintenance